# kurs7

./: .env.sample  Dockerfile  README.md  pyproject.toml
config/: settings.py  urls.py
main/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
main/management/commands/: filldb.py
users/: serializers.py  urls.py  views.py
users/management/commands/: createusers.py
